# tms-university

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  main.py  pyproject.toml  settings.py
api/: handlers.py  models.py
db/: dals.py  session.py
migrations/: env.py
migrations/versions/: bb2f1dd2dad1_create_table_for_users.py
